--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,275 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+    margin: 0px ;
+    width: 100vw ; 
+    height: 100vh ;
+    overflow: auto;
+}
+#root {
+
+    margin: 0px ;
+    width: 100vw ; 
+    height: 100vh ;
+    overflow: auto;
+
+    position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+
+
+
+
+
+
+.div_app{
+
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top:5% ;
+
+
+    width: 950px;
+    height: 600px;
+
+    border: 1px solid rgb(220, 220, 220);
+    border-radius: 15px;
+
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+
+    display: grid;
+    grid-template-columns: 45% 51.5%;
+
+}
+
+
+
+
+
+
+
+
+
+
+.div_left_component{
+    /* background-color: rgb(255, 255, 255); */
+    position: relative;
+    height: 100%;
+
+
+}
+
+
+
+
+.div_friend_list_component{
+    background-color: rgb(255, 229, 229);
+
+}
+.div_friend_list_component ul{
+    
+    list-style: none;
+    background-color: rgb(255, 255, 255);
+}
+.div_friend_list_component li{
+    
+    height: 70px;
+    width: 350px;
+
+    /* background-color: aquamarine; */
+    margin-bottom: 10px;
+
+    display: grid;
+    grid-template-columns: 55px 1fr 100px;
+
+    border-radius: 5px;
+}
+.div_friend_list_component li:hover{
+    
+    background-color: rgb(255, 241, 223);
+}
+
+
+.li_div_img{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img_friend {
+
+    border-radius: 50px;
+}
+
+
+p {
+    margin: 0;
+}
+.li_div_text{
+
+    margin-left: 7px;
+    /* background-color: bisque; */
+}
+.friend_name {
+    margin-top: 12px;
+    font-family: gilroy;
+    font-weight: 700;
+    font-size: 18px;
+}
+.payment_details {
+    font-family: Arial;
+    font-size: 15px;
+    margin-top: 3px;
+}
+
+
+
+.li_div_button{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.li_button {
+
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+
+    cursor: pointer;
+    
+    font-family: gilroy;
+    font-size: 13px;
+    font-weight: 700;
+
+    background-color: rgb(248, 184, 66);
+
+}
+.li_button:hover {
+
+    background-color: rgb(246, 177, 49);
+}
+.li_button:active {
+
+    background-color: rgb(226, 163, 47);
+}
+
+
+
+
+
+
+
+
+
+.div_adding_friend_component{
+    background-color: rgb(194, 255, 255);
+
+    position: relative;
+}
+
+.div_add_button {
+
+    position: absolute;
+    right: 48px;
+}
+.div_working{
+
+    position: absolute;
+    right: 48px;
+    top: 40px;
+}
+.div_close_button{
+
+    position: absolute;
+    right: 48px;
+    top: 210px;
+}
+
+
+.left_comp_btn {
+
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+
+    cursor: pointer;
+    
+    font-family: gilroy;
+    font-size: 13px;
+    font-weight: 700;
+
+    background-color: rgb(248, 184, 66);
+
+}
+.left_comp_btn:hover {
+
+    background-color: rgb(246, 177, 49);
+}
+.left_comp_btn:active {
+
+    background-color: rgb(226, 163, 47);
+}
+.div_working{
+
+    width: 300px;
+    height: 160px;
+    background-color: rgb(222, 104, 127);
+}
+
+
+
+
+
+
+
+
+
+
+
+.div_right_component{
+
+    background-color: aquamarine;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.add_frind_div{
+
+    /* position: absolute; */
+    right: 0px;
+
+   height: 200px;
+   width: 100%;
+   background-color: beige;
+}
+.div_add_friend_working {
+
+    width: 100px;
+    height: 100px;
+    background-color: aquamarine;
 }
