--- a/src/index.css
+++ b/src/index.css
@@ -34,10 +34,10 @@ body {
     width: 950px;
     height: 600px;
 
-    border: 1px solid rgb(220, 220, 220);
-    border-radius: 15px;
+    /* border: 1px solid rgb(220, 220, 220);
+    border-radius: 15px; */
 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); */
 
     display: grid;
     grid-template-columns: 45% 51.5%;
@@ -54,10 +54,9 @@ body {
 
 
 .div_left_component{
-    /* background-color: rgb(255, 255, 255); */
+    /* background-color: rgb(173, 213, 255); */
     position: relative;
     height: 100%;
-
 
 }
 
@@ -65,7 +64,7 @@ body {
 
 
 .div_friend_list_component{
-    background-color: rgb(255, 229, 229);
+    background-color: rgb(140, 39, 39);
 
 }
 .div_friend_list_component ul{
@@ -112,7 +111,7 @@ p {
     margin-left: 7px;
     /* background-color: bisque; */
 }
-.friend_name {
+.friend_name {   
     margin-top: 12px;
     font-family: gilroy;
     font-weight: 700;
@@ -179,13 +178,14 @@ p {
 
     position: absolute;
     right: 48px;
-    top: 40px;
+
+
 }
 .div_close_button{
 
     position: absolute;
     right: 48px;
-    top: 210px;
+    top: 195px;
 }
 
 
@@ -214,9 +214,74 @@ p {
 }
 .div_working{
 
-    width: 300px;
+    width: 320px ;
     height: 160px;
-    background-color: rgb(222, 104, 127);
+    background-color: rgb(255, 241, 223);
+    border-radius: 10px;
+
+    font-family: gilroy;
+    padding: 10px;
+    font-size: 18px;
+
+}
+.div_friend_name{
+
+    width: 100%;
+    /* background-color: aquamarine; */
+    margin-bottom: 20px;
+}
+.inner_label{
+    margin-right: 18px;
+}
+.label_img_url{
+    margin-right: 34px;
+}
+.inner_input{
+
+    border: none;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid rgb(255, 214, 139);
+
+    outline: none;
+    font-family: gilroy;
+     
+}
+.div_img_url{
+
+    margin-bottom: 20px; 
+        
+
+}
+.btn_add {
+
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+
+    cursor: pointer;
+    
+    font-family: gilroy;
+    font-size: 13px;
+    font-weight: 700;
+
+    background-color: rgb(248, 184, 66);
+
+}
+.btn_add:hover {
+
+    background-color: rgb(246, 177, 49);
+}
+.btn_add:active {
+
+    background-color: rgb(226, 163, 47);
+}
+.div_final_add_btn{
+    position: absolute;
+    right: 30px;
+}
+.btn_add{
+    width: 150px;
 }
 
 
@@ -228,11 +293,31 @@ p {
 
 
 
-
-.div_right_component{
+/* .div_right_component{
 
     background-color: aquamarine;
 
+} */
+.right_component_main_box{
+    width: 520px;
+    height: 400px;
+    background-color: rgb(255, 241, 223);
+
+    border-radius: 15px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.right_component_main_box_inner{
+
+    width: 85%;
+    height: 85%;
+    background-color: rgb(176, 255, 255);
+
+    display: grid;
+    grid-template-rows: 30px 1fr;
+
 }
 
 
@@ -256,20 +341,3 @@ p {
 
 
 
-
-
-.add_frind_div{
-
-    /* position: absolute; */
-    right: 0px;
-
-   height: 200px;
-   width: 100%;
-   background-color: beige;
-}
-.div_add_friend_working {
-
-    width: 100px;
-    height: 100px;
-    background-color: aquamarine;
-}
