Select Close Working

--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ body {
 }
 .div_friend_list_component li:hover{
     
-    background-color: rgb(255, 241, 223);
+    background-color: #fff1df ;
 }
 
 
